--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "classnames": "^2.3.1",
+    "immer": "^10.0.3",
     "markdown-to-jsx": "^7.1.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
